Modified getter